--- a/RedbackNg/src/styles.css
+++ b/RedbackNg/src/styles.css
@@ -69,8 +69,16 @@ textarea {
 
 /******** Inputs **********/
 
+
+
+
 .rb-input-margin {
 	margin: var(--v12px) var(--v5px) var(--v12px) var(--v16px)
+}
+
+.rb-switch-fieldheight {
+    align-items: end!important;
+    height: var(--v42px);
 }
 
 .rb-switch-margin {
